# Skat

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py  tox.ini
iss/: __init__.py  extractor.py  pos_extractor.py  verification.py
iss/tests/: test_iss.py
skat/: __main__.py  card.py  deck.py  game.py  hand.py  player.py  state.py  trick.py  utils.py
skat/agents/: __init__.py  command_line.py  deep.py  dqn.py  random.py  rl.py
skat/agents/rl/: buffer.py  dqn.py  mask.py
skat/games/: __init__.py  bidding.py  grand.py  null.py  suit.py
skat/models/: __init__.py  suit_solo.py
skat/utils/: crawler.py  game_converter.py  misc.py  skatstube.py
tests/: test_card.py  test_deck.py  test_game.py  test_hand.py  test_round.py  test_skatstube.py  test_trick.py  test_utils.py
tests/agents/rl/: test_mask.py
tests/games/: test_grand.py  test_null.py  test_suit_game.py
tests/testfiles/skatstube/: 340939961.json
